--- a/index.html
+++ b/index.html
@@ -42,15 +42,50 @@
         </div>
         <div class="experience-container">
             <h2>Experience</h2>
-            <h3>Quality Checker - Israel Certified</h3>
-            <h5>Yngen Datacom Corporation - MobilEye</h5>
-            <h5>Feb 2023 - July 2023</h5>
             <div class="experince-items">
+                <h3>Quality Checker - Israel Certified</h3>
+                <h5>Yngen Datacom Corporation - MobilEye</h5>
+                <h5>February 2023 - July 2023</h5>
                 <ul>
                     <li>Responsible for checking for the tagged/labeled video clips thoroughly for errors and non-conformance before approving them for client review</li>
                     <li>Handling a group of Associate Image Processors (AIPs) helping the Team Leader (TL) superverise the assigned team.</li>
                 </ul>
             </div>
+            <div class="experince-items">
+                <h3>Associate Image Processor</h3>
+                <h5>Yngen Datacom Corporation - MobilEye</h5>
+                <h5>November 2022 - Present</h5>
+                <ul>
+                    <li>Responsible for correctly tagging, labelling, categorizing video clips as instructed per project specifications.</li>
+                    <li>Quality checks own work before submission to Quality Checker.</li>
+                </ul>
+            </div>
+            <div class="experince-items">
+                <h3>IT Sales Support</h3>
+                <h5>Intercoastal International Technologies Corporation</h5>
+                <h5>October 2019 - June 2021</h5>
+                <ul>
+                    <li>Managed all key customer-supplier portals and submit bid offers as approved by immediate supervisor.</li>
+                    <li>Ensured that all potential online sales opportunities are given priority and bid offers are submitted</li>
+                    <li>Managed Bosch Rexroth portal for quotations.</li>
+                    <li>Appointed as Safety Officer II</li>
+                </ul>
+            </div>
+            <div class="experince-items">
+                <h3>Test Product Engineer - OJT</h3>
+                <h5>ON-Semiconductor Philippines Incorporated</h5>
+                <h5>April 2017 - July 2017</h5>
+                <ul>
+                    <li>Responsible for low yield and gate failed lot verification and analysis up to disposition.</li>
+                    <li>Assist in device characterization, data gathering, and reporting.</li>
+                    <li>Perform other and or projects that may be assigned by the immediate supervisor</li>
+                </ul>
+            </div>
+        </div>
+        <div class="educational-container">
+            <h2>Education</h2>
+            <h3>University of Perpetual Help System Laguna - Biñan Campus</h3>
+            <h5>Bachelor of Science in Computer Engineering</h5>
         </div>
         
     </div>
