--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Jeffel Madula</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div class="top-container">
         <div class="top-name">
             <h1>John Jeffel Q. Madula</h1>
             <h3>Front-end Web Developer</h3>
+            <img class="myimage-item" src="images/jeffelimg.jpg" alt="Jeffelimg">
         </div>    
     </div>
     <hr>
@@ -87,7 +89,12 @@
             <h3>University of Perpetual Help System Laguna - Biñan Campus</h3>
             <h5>Bachelor of Science in Computer Engineering</h5>
         </div>
-        
+        <div class="affiliations-container">
+            <ul>
+                <li>4th Year Board Member of Computer Engineering Microsociety 2016-2017</li>
+                <li>Professional Memeber of Institute of Computer Engineers of the Philippines Region IV-A (ICpEP) 2021 - 2022</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
