--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <hr>
     <div class="middle-container">
         <div class="contact-container">
-            <img src="" alt="">
+            <img src="images/phone.png" alt="phoneimg">
             <h5>+639664591194</h5>
-            <img src="" alt="">
-            <a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a>
-            <img src="" alt="">
+            <img src="images/mail.png" alt="">
+            <p><a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a></p>
+            <img src="images/location.png" alt="">
             <h5>104 Don Pablo Subdivision, Canlalay, City of Biñan, Laguna</h5>
         </div>
         <div class="objectives-container">
