added display flex

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <div class="top-name">
             <h1>John Jeffel Q. Madula</h1>
             <h3>Front-end Web Developer</h3>
+        </div>
+        <div>        
             <img class="myimage-item" src="images/jeffelimg.jpg" alt="Jeffelimg">
-        </div>    
+        </div>
     </div>
     <hr>
     <div class="middle-container">
