--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
         </div>
     </div>
     <hr>
-    
     <div class="middle-container">
-        <div class="contact-container">
-            <img src="images/phone.png" alt="phoneimg">
-            <h5>+639664591194</h5>
-            <img src="images/mail.png" alt="">
-            <p><a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a></p>
-            <img src="images/location.png" alt="">
-            <h5>104 Don Pablo Subdivision, Canlalay, City of Biñan, Laguna</h5>
+        <div class="contact-container bodyresume">
+            <img class="phone-item" src="images/phone.png" alt="phoneimg">
+            <p class="phone-item">+639664591194</p>
+            <img class="mail-item" src="images/mail.png" alt="mailimg">
+            <p class="mail-item"><a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a></p>
+            <img src="images/location.png" alt="locationimg">
+            <p>104 Don Pablo Subdivision, Canlalay, City of Biñan, Laguna</p>
         </div>
-        <div class="objectives-container">
+        <div class="objectives-container bodyresume">
             <h2>Objectives</h2>
             <p>To achieve a high career growth of continuous learning process to achieve goals and keep myself dynamic in the chaging scenario to become 
                 a succesful professional and lead to the best oppurtunity</p>  
         </div>
-        <div class="skills-container">
+        <div class="skills-container bodyresume">
             <h2>Skills</h2>
             <div class="skill-items">
                 <ul>
@@ -45,27 +44,27 @@
                 </ul>
             </div>
         </div>
-        <div class="experience-container">
+        <div class="experience-container bodyresume">
             <h2>Experience</h2>
             <div class="experince-items">
                 <h3>Quality Checker - Israel Certified</h3>
-                <h5>Yngen Datacom Corporation - MobilEye</h5>
+                <p>Yngen Datacom Corporation - MobilEye</p>
                 <h5>February 2023 - July 2023</h5>
                 <ul>
                     <li>Responsible for checking for the tagged/labeled video clips thoroughly for errors and non-conformance before approving them for client review</li>
                     <li>Handling a group of Associate Image Processors (AIPs) helping the Team Leader (TL) superverise the assigned team.</li>
                 </ul>
             </div>
-            <div class="experince-items">
+            <div class="experince-items bodyresume">
                 <h3>Associate Image Processor</h3>
-                <h5>Yngen Datacom Corporation - MobilEye</h5>
+                <p>Yngen Datacom Corporation - MobilEye<p>
                 <h5>November 2022 - Present</h5>
                 <ul>
                     <li>Responsible for correctly tagging, labelling, categorizing video clips as instructed per project specifications.</li>
                     <li>Quality checks own work before submission to Quality Checker.</li>
                 </ul>
             </div>
-            <div class="experince-items">
+            <div class="experince-items bodyresume">
                 <h3>IT Sales Support</h3>
                 <h5>Intercoastal International Technologies Corporation</h5>
                 <h5>October 2019 - June 2021</h5>
@@ -76,7 +75,7 @@
                     <li>Appointed as Safety Officer II</li>
                 </ul>
             </div>
-            <div class="experince-items">
+            <div class="experince-items bodyresume">
                 <h3>Test Product Engineer - OJT</h3>
                 <h5>ON-Semiconductor Philippines Incorporated</h5>
                 <h5>April 2017 - July 2017</h5>
@@ -87,12 +86,13 @@
                 </ul>
             </div>
         </div>
-        <div class="educational-container">
+        <div class="educational-container bodyresume">
             <h2>Education</h2>
             <h3>University of Perpetual Help System Laguna - Biñan Campus</h3>
             <h5>Bachelor of Science in Computer Engineering</h5>
         </div>
-        <div class="affiliations-container">
+        <div class="affiliations-container bodyresume">
+            <h2>Affiliations</h2>
             <ul>
                 <li>4th Year Board Member of Computer Engineering Microsociety 2016-2017</li>
                 <li>Professional Memeber of Institute of Computer Engineers of the Philippines Region IV-A (ICpEP) 2021 - 2022</li>
