--- a/index.html
+++ b/index.html
@@ -16,87 +16,91 @@
             <img class="myimage-item" src="images/jeffelimg.jpg" alt="Jeffelimg">
         </div>
     </div>
-    <hr>
     <div class="middle-container">
-        <div class="contact-container bodyresume">
-            <img class="phone-item" src="images/phone.png" alt="phoneimg">
-            <p class="phone-item">+639664591194</p>
-            <img class="mail-item" src="images/mail.png" alt="mailimg">
-            <p class="mail-item"><a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a></p>
-            <img src="images/location.png" alt="locationimg">
-            <p>104 Don Pablo Subdivision, Canlalay, City of Biñan, Laguna</p>
-        </div>
-        <div class="objectives-container bodyresume">
-            <h2>Objectives</h2>
-            <p>To achieve a high career growth of continuous learning process to achieve goals and keep myself dynamic in the chaging scenario to become 
-                a succesful professional and lead to the best oppurtunity</p>  
-        </div>
-        <div class="skills-container bodyresume">
-            <h2>Skills</h2>
-            <div class="skill-items">
+        <div class="left-container">
+            <div class="contact-container">
+                <img src="images/phone.png" alt="phoneimg">
+                <p>+639664591194</p>
+                <img src="images/mail.png" alt="mailimg">
+                <p><a href="mailto:johnjeffelmadula@gmail.com">johnjeffelmadula@gmail.com</a></p>
+                <img src="images/location.png" alt="locationimg">
+                <p>104 Don Pablo Subdivision, Canlalay, City of Biñan, Laguna</p>
+            </div>
+            <div class="skills-container bodyresume">
+                <h2>Skills</h2>
+                <div class="skill-items">
+                    <ul>
+                        <li>C</li>
+                        <li>C++</li>
+                        <li>Visual Basic</li>
+                        <li>Auto CAD R14 and Autodesk AutoCAD 2016</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="educational-container bodyresume">
+                <h2>Education</h2>
+                <h3>University of Perpetual Help System Laguna - Biñan Campus</h3>
+                <h5>Bachelor of Science in Computer Engineering</h5>
+            </div>
+            <div class="affiliations-container bodyresume">
+                <h2>Affiliations</h2>
                 <ul>
-                    <li>C</li>
-                    <li>C++</li>
-                    <li>Visual Basic</li>
-                    <li>Auto CAD R14 and Autodesk AutoCAD 2016</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
+                    <li>4th Year Board Member of Computer Engineering Microsociety 2016-2017</li>
+                    <li>Professional Memeber of Institute of Computer Engineers of the Philippines Region IV-A (ICpEP) 2021 - 2022</li>
                 </ul>
             </div>
         </div>
-        <div class="experience-container bodyresume">
-            <h2>Experience</h2>
-            <div class="experince-items">
-                <h3>Quality Checker - Israel Certified</h3>
-                <p>Yngen Datacom Corporation - MobilEye</p>
-                <h5>February 2023 - July 2023</h5>
-                <ul>
-                    <li>Responsible for checking for the tagged/labeled video clips thoroughly for errors and non-conformance before approving them for client review</li>
-                    <li>Handling a group of Associate Image Processors (AIPs) helping the Team Leader (TL) superverise the assigned team.</li>
-                </ul>
+        
+        <div class="right-container">
+            <div class="objectives-container bodyresume">
+                <h2>Objectives</h2>
+                <p>To achieve a high career growth of continuous learning process to achieve goals and keep myself dynamic in the chaging scenario to become 
+                    a succesful professional and lead to the best oppurtunity</p>  
             </div>
-            <div class="experince-items bodyresume">
-                <h3>Associate Image Processor</h3>
-                <p>Yngen Datacom Corporation - MobilEye<p>
-                <h5>November 2022 - Present</h5>
-                <ul>
-                    <li>Responsible for correctly tagging, labelling, categorizing video clips as instructed per project specifications.</li>
-                    <li>Quality checks own work before submission to Quality Checker.</li>
-                </ul>
+            <div class="experience-container bodyresume">
+                <h2>Experience</h2>
+                <div class="experince-items">
+                    <h3>Quality Checker - Israel Certified</h3>
+                    <p>Yngen Datacom Corporation - MobilEye</p>
+                    <h5>February 2023 - July 2023</h5>
+                    <ul>
+                        <li>Responsible for checking for the tagged/labeled video clips thoroughly for errors and non-conformance before approving them for client review</li>
+                        <li>Handling a group of Associate Image Processors (AIPs) helping the Team Leader (TL) superverise the assigned team.</li>
+                    </ul>
+                </div>
+                <div class="experince-items bodyresume">
+                    <h3>Associate Image Processor</h3>
+                    <p>Yngen Datacom Corporation - MobilEye<p>
+                    <h5>November 2022 - Present</h5>
+                    <ul>
+                        <li>Responsible for correctly tagging, labelling, categorizing video clips as instructed per project specifications.</li>
+                        <li>Quality checks own work before submission to Quality Checker.</li>
+                    </ul>
+                </div>
+                <div class="experince-items bodyresume">
+                    <h3>IT Sales Support</h3>
+                    <h5>Intercoastal International Technologies Corporation</h5>
+                    <h5>October 2019 - June 2021</h5>
+                    <ul>
+                        <li>Managed all key customer-supplier portals and submit bid offers as approved by immediate supervisor.</li>
+                        <li>Ensured that all potential online sales opportunities are given priority and bid offers are submitted</li>
+                        <li>Managed Bosch Rexroth portal for quotations.</li>
+                        <li>Appointed as Safety Officer II</li>
+                    </ul>
+                </div>
+                <div class="experince-items bodyresume">
+                    <h3>Test Product Engineer - OJT</h3>
+                    <h5>ON-Semiconductor Philippines Incorporated</h5>
+                    <h5>April 2017 - July 2017</h5>
+                    <ul>
+                        <li>Responsible for low yield and gate failed lot verification and analysis up to disposition.</li>
+                        <li>Assist in device characterization, data gathering, and reporting.</li>
+                        <li>Perform other and or projects that may be assigned by the immediate supervisor</li>
+                    </ul>
+                </div>
             </div>
-            <div class="experince-items bodyresume">
-                <h3>IT Sales Support</h3>
-                <h5>Intercoastal International Technologies Corporation</h5>
-                <h5>October 2019 - June 2021</h5>
-                <ul>
-                    <li>Managed all key customer-supplier portals and submit bid offers as approved by immediate supervisor.</li>
-                    <li>Ensured that all potential online sales opportunities are given priority and bid offers are submitted</li>
-                    <li>Managed Bosch Rexroth portal for quotations.</li>
-                    <li>Appointed as Safety Officer II</li>
-                </ul>
-            </div>
-            <div class="experince-items bodyresume">
-                <h3>Test Product Engineer - OJT</h3>
-                <h5>ON-Semiconductor Philippines Incorporated</h5>
-                <h5>April 2017 - July 2017</h5>
-                <ul>
-                    <li>Responsible for low yield and gate failed lot verification and analysis up to disposition.</li>
-                    <li>Assist in device characterization, data gathering, and reporting.</li>
-                    <li>Perform other and or projects that may be assigned by the immediate supervisor</li>
-                </ul>
-            </div>
-        </div>
-        <div class="educational-container bodyresume">
-            <h2>Education</h2>
-            <h3>University of Perpetual Help System Laguna - Biñan Campus</h3>
-            <h5>Bachelor of Science in Computer Engineering</h5>
-        </div>
-        <div class="affiliations-container bodyresume">
-            <h2>Affiliations</h2>
-            <ul>
-                <li>4th Year Board Member of Computer Engineering Microsociety 2016-2017</li>
-                <li>Professional Memeber of Institute of Computer Engineers of the Philippines Region IV-A (ICpEP) 2021 - 2022</li>
-            </ul>
         </div>
     </div>
 </body>
