--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="whole-container">
+        <div>
             <div class="top-container">
                 <div class="top-name">
                     <h1>John Jeffel Q. Madula</h1>
@@ -110,6 +111,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 </body>
 </html>
